--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.22.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
@@ -18,7 +19,9 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.0",
-    "sort-by": "^1.2.0"
+    "react-toastify": "^9.1.3",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
