--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
+    "keen-slider": "^6.8.5",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-helmet-async": "^1.3.0",
